--- a/requirements.txt
+++ b/requirements.txt
@@ -1,160 +1,214 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-_openmp_mutex=4.5=1_gnu
-absl-py=1.0.0=pypi_0
-asttokens=2.0.5=pyhd3eb1b0_0
-astunparse=1.6.3=pypi_0
-attrs=21.4.0=pyhd3eb1b0_0
-backcall=0.2.0=pyhd3eb1b0_0
-blas=1.0=mkl
-bleach=4.1.0=pyhd3eb1b0_0
-ca-certificates=2022.4.26=h06a4308_0
-cachetools=4.2.4=pypi_0
-certifi=2021.5.30=py36h06a4308_0
-charset-normalizer=2.0.12=pypi_0
-click=8.0.3=pyhd3eb1b0_0
-cycler=0.11.0=pypi_0
-dataclasses=0.8=pyh4f3eec9_6
-dbus=1.13.18=hb2f20db_0
-decorator=5.1.1=pyhd3eb1b0_0
-defusedxml=0.7.1=pyhd3eb1b0_0
-entrypoints=0.3=py36_0
-executing=0.8.3=pyhd3eb1b0_0
-expat=2.4.4=h295c915_0
-flask=2.0.3=pyhd3eb1b0_0
-fontconfig=2.13.1=h6c09931_0
-freetype=2.11.0=h70c0345_0
-gast=0.3.3=pypi_0
-glib=2.69.1=h4ff587b_1
-google-auth=1.35.0=pypi_0
-google-auth-oauthlib=0.4.6=pypi_0
-google-pasta=0.2.0=pypi_0
-grpcio=1.44.0=pypi_0
-gst-plugins-base=1.14.0=h8213a91_2
-gstreamer=1.14.0=h28cd5cc_2
-h5py=2.10.0=pypi_0
-icu=58.2=he6710b0_3
-idna=3.3=pypi_0
-importlib-metadata=4.8.3=pypi_0
-intel-openmp=2022.0.1=h06a4308_3633
-ipykernel=5.3.4=py36h5ca1d4c_0
-ipython=7.16.1=py36h5ca1d4c_0
-ipython_genutils=0.2.0=pyhd3eb1b0_1
-ipywidgets=7.6.5=pyhd3eb1b0_1
-itsdangerous=2.0.1=pyhd3eb1b0_0
-jedi=0.17.0=py36_0
-jinja2=3.0.3=pyhd3eb1b0_0
-joblib=1.0.1=pyhd3eb1b0_0
-jpeg=9e=h7f8727e_0
-jsonschema=2.6.0=py36_0
-jupyter=1.0.0=py36_7
-jupyter_client=7.1.2=pyhd3eb1b0_0
-jupyter_console=6.4.3=pyhd3eb1b0_0
-jupyter_core=4.8.1=py36h06a4308_0
-jupyterlab_pygments=0.1.2=py_0
-jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
-keras-preprocessing=1.1.2=pypi_0
-kiwisolver=1.3.1=pypi_0
-ld_impl_linux-64=2.35.1=h7274673_9
-libffi=3.3=he6710b0_2
-libgcc-ng=9.3.0=h5101ec6_17
-libgfortran-ng=7.5.0=ha8ba4b0_17
-libgfortran4=7.5.0=ha8ba4b0_17
-libgomp=9.3.0=h5101ec6_17
-libpng=1.6.37=hbc83047_0
-libsodium=1.0.18=h7b6447c_0
-libstdcxx-ng=9.3.0=hd4cf53a_17
-libuuid=1.0.3=h7f8727e_2
-libxcb=1.14=h7b6447c_0
-libxml2=2.9.12=h03d6c58_0
-markdown=3.3.6=pypi_0
-markupsafe=2.0.1=py36h27cfd23_0
-matplotlib=3.3.4=pypi_0
-matplotlib-inline=0.1.2=pyhd3eb1b0_2
-mistune=0.8.4=py36h7b6447c_0
-mkl=2020.2=256
-mkl-service=2.3.0=py36he8ac12f_0
-mkl_fft=1.3.0=py36h54f3939_0
-mkl_random=1.1.1=py36h0573a6f_0
-nbconvert=5.6.1=py36_0
-nbformat=5.1.3=pyhd3eb1b0_0
-ncurses=6.3=h7f8727e_2
-nest-asyncio=1.5.1=pyhd3eb1b0_0
-notebook=6.0.3=py36_0
-numpy=1.19.5=pypi_0
-numpy-base=1.19.2=py36hfa32c7d_0
-oauthlib=3.2.0=pypi_0
-openssl=1.1.1o=h7f8727e_0
-opt-einsum=3.3.0=pypi_0
-packaging=21.3=pyhd3eb1b0_0
-pandas=1.1.5=py36ha9443f7_0
-pandoc=2.12=h06a4308_0
-pandocfilters=1.5.0=pyhd3eb1b0_0
-parso=0.8.3=pyhd3eb1b0_0
-pcre=8.45=h295c915_0
-pexpect=4.8.0=pyhd3eb1b0_3
-pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=8.4.0=pypi_0
-pip=21.2.2=py36h06a4308_0
-prometheus_client=0.13.1=pyhd3eb1b0_0
-prompt-toolkit=3.0.20=pyhd3eb1b0_0
-prompt_toolkit=3.0.20=hd3eb1b0_0
-protobuf=3.19.4=pypi_0
-ptyprocess=0.7.0=pyhd3eb1b0_2
-pure_eval=0.2.2=pyhd3eb1b0_0
-pyasn1=0.4.8=pypi_0
-pyasn1-modules=0.2.8=pypi_0
-pycparser=2.21=pyhd3eb1b0_0
-pygments=2.11.2=pyhd3eb1b0_0
-pyparsing=3.0.4=pyhd3eb1b0_0
-pyqt=5.9.2=py36h05f1152_2
-python=3.6.10=h7579374_2
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-fastjsonschema=2.15.1=pyhd3eb1b0_0
-pytz=2021.3=pyhd3eb1b0_0
-pyzmq=22.2.1=py36h295c915_1
-qt=5.9.7=h5867ecd_1
-qtconsole=5.2.2=pyhd3eb1b0_0
-qtpy=2.0.1=pyhd3eb1b0_0
-readline=8.1.2=h7f8727e_1
-requests=2.27.1=pypi_0
-requests-oauthlib=1.3.1=pypi_0
-rsa=4.8=pypi_0
-scikit-learn=0.24.2=py36ha9443f7_0
-scipy=1.4.1=pypi_0
-send2trash=1.8.0=pyhd3eb1b0_1
-setuptools=58.0.4=py36h06a4308_0
-sip=4.19.8=py36hf484d3e_0
-six=1.16.0=pyhd3eb1b0_1
-soupsieve=2.3.1=pyhd3eb1b0_0
-sqlite=3.38.2=hc218d9a_0
-stack_data=0.2.0=pyhd3eb1b0_0
-tensorboard=2.2.2=pypi_0
-tensorboard-plugin-wit=1.8.1=pypi_0
-tensorflow=2.2.0=pypi_0
-tensorflow-estimator=2.2.0=pypi_0
-tensorflow-hub=0.12.0=pypi_0
-tensorflowjs=3.15.0=pypi_0
-termcolor=1.1.0=pypi_0
-terminado=0.9.4=py36h06a4308_0
-testpath=0.5.0=pyhd3eb1b0_0
-threadpoolctl=2.2.0=pyh0d69192_0
-tk=8.6.11=h1ccaba5_0
-tornado=6.1=py36h27cfd23_0
-traitlets=4.3.3=py36h06a4308_0
-typing-extensions=4.1.1=hd3eb1b0_0
-typing_extensions=4.1.1=pyh06a4308_0
-tzdata=2022a=hda174b7_0
-urllib3=1.26.9=pypi_0
-wcwidth=0.2.5=pyhd3eb1b0_0
-webencodings=0.5.1=py36_1
-werkzeug=2.0.3=pyhd3eb1b0_0
-wheel=0.37.1=pyhd3eb1b0_0
-widgetsnbextension=3.5.1=py36_0
-wrapt=1.14.0=pypi_0
-xz=5.2.5=h7b6447c_0
-zeromq=4.3.4=h2531618_0
-zipp=3.6.0=pypi_0
-zlib=1.2.12=h7f8727e_2
+absl-py==1.0.0
+actionlib==1.13.2
+angles==1.9.13
+asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
+astunparse==1.6.3
+attrs @ file:///opt/conda/conda-bld/attrs_1642510447205/work
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
+bondpy==1.8.6
+cachetools==4.2.4
+camera-calibration==1.16.0
+camera-calibration-parsers==1.12.0
+catkin==0.8.10
+certifi==2021.5.30
+charset-normalizer==2.0.12
+click==8.0.3
+controller-manager==0.19.5
+controller-manager-msgs==0.19.5
+cv-bridge==1.16.0
+cycler==0.11.0
+dataclasses @ file:///tmp/build/80754af9/dataclasses_1614363715916/work
+decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+diagnostic-analysis==1.11.0
+diagnostic-common-diagnostics==1.11.0
+diagnostic-updater==1.11.0
+dynamic-reconfigure==1.7.2
+entrypoints==0.3
+executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+fastjsonschema @ file:///tmp/build/80754af9/python-fastjsonschema_1620414857593/work/dist
+Flask @ file:///opt/conda/conda-bld/flask_1648041541647/work
+gast==0.3.3
+gazebo_plugins==2.9.2
+gazebo_ros==2.9.2
+gencpp==0.6.5
+geneus==3.0.0
+genlisp==0.4.18
+genmsg==0.5.16
+gennodejs==2.0.2
+genpy==0.6.15
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+gps_common==0.3.2
+grpcio==1.44.0
+h5py==2.10.0
+idna==3.3
+image-geometry==1.16.0
+importlib-metadata==4.8.3
+interactive-markers==1.12.0
+ipykernel @ file:///tmp/build/80754af9/ipykernel_1596206602906/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///tmp/build/80754af9/ipython_1593447367857/work
+ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
+itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
+jedi==0.17.0
+Jinja2 @ file:///opt/conda/conda-bld/jinja2_1647436528585/work
+joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
+joint-state-publisher==1.15.1
+joint-state-publisher-gui==1.15.1
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client @ file:///opt/conda/conda-bld/jupyter_client_1643638337975/work
+jupyter-console @ file:///opt/conda/conda-bld/jupyter_console_1647002188872/work
+jupyter-core @ file:///tmp/build/80754af9/jupyter_core_1633420100582/work
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+laser_geometry==1.6.7
+Markdown==3.3.6
+MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1621528150516/work
+matplotlib==3.3.4
+matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
+mavros==1.13.0
+message-filters==1.15.14
+mistune==0.8.4
+mkl-fft==1.3.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+nbconvert==5.6.1
+nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
+notebook==6.0.3
+numpy==1.19.5
+oauthlib==3.2.0
+opt-einsum==3.3.0
+packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
+pandas==1.1.5
+pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
+parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==8.4.0
+prometheus-client @ file:///opt/conda/conda-bld/prometheus_client_1643788673601/work
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
+protobuf==3.19.4
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
+pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+python-qt-binding==0.4.4
+pytz==2021.3
+pyzmq @ file:///tmp/build/80754af9/pyzmq_1628268400816/work
+qt-dotgraph==0.4.2
+qt-gui==0.4.2
+qt-gui-cpp==0.4.2
+qt-gui-py-common==0.4.2
+qtconsole @ file:///opt/conda/conda-bld/qtconsole_1643819126524/work
+QtPy @ file:///opt/conda/conda-bld/qtpy_1649073884068/work
+requests==2.27.1
+requests-oauthlib==1.3.1
+resource_retriever==1.12.7
+ros_numpy==0.0.5
+rosapi==0.11.13
+rosbag==1.15.14
+rosboost-cfg==1.15.8
+rosbridge_library==0.11.13
+rosbridge_server==0.11.13
+rosclean==1.15.8
+roscreate==1.15.8
+rosgraph==1.15.14
+roslaunch==1.15.14
+roslib==1.15.8
+roslint==0.12.0
+roslz4==1.15.14
+rosmake==1.15.8
+rosmaster==1.15.14
+rosmsg==1.15.14
+rosnode==1.15.14
+rosparam==1.15.14
+rospy==1.15.14
+rosservice==1.15.14
+rostest==1.15.14
+rostopic==1.15.14
+rosunit==1.15.8
+roswtf==1.15.14
+rqt-moveit==0.5.10
+rqt-reconfigure==0.5.4
+rqt-robot-dashboard==0.5.8
+rqt-robot-monitor==0.5.14
+rqt-rviz==0.7.0
+rqt_action==0.4.9
+rqt_bag==0.5.1
+rqt_bag_plugins==0.5.1
+rqt_console==0.4.11
+rqt_dep==0.4.12
+rqt_graph==0.4.14
+rqt_gui==0.5.3
+rqt_gui_py==0.5.3
+rqt_image_view==0.4.16
+rqt_launch==0.4.9
+rqt_logger_level==0.4.11
+rqt_msg==0.4.10
+rqt_nav_view==0.5.7
+rqt_plot==0.4.13
+rqt_pose_view==0.5.11
+rqt_publisher==0.4.10
+rqt_py_common==0.5.3
+rqt_py_console==0.4.10
+rqt_robot_steering==0.5.12
+rqt_runtime_monitor==0.5.9
+rqt_service_caller==0.4.10
+rqt_shell==0.4.11
+rqt_srv==0.4.9
+rqt_tf_tree==0.6.2
+rqt_top==0.4.10
+rqt_topic==0.4.13
+rqt_web==0.4.10
+rsa==4.8
+rviz==1.14.14
+scikit-learn @ file:///tmp/build/80754af9/scikit-learn_1621365798935/work
+scipy @ file:///tmp/build/80754af9/scipy_1597686625380/work
+Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
+sensor-msgs==1.13.1
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+smach==2.5.0
+smach-ros==2.5.0
+smclib==1.8.6
+soupsieve @ file:///tmp/build/80754af9/soupsieve_1636706018808/work
+stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+swri-transform-util==2.14.2
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.2.0
+tensorflow-estimator==2.2.0
+tensorflow-hub==0.12.0
+tensorflowjs==3.15.0
+termcolor==1.1.0
+terminado==0.9.4
+testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
+tf==1.13.2
+tf-conversions==1.13.2
+tf2-geometry-msgs==0.7.5
+tf2-kdl==0.7.5
+tf2-py==0.7.5
+tf2-ros==0.7.5
+threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
+topic-tools==1.15.14
+tornado @ file:///tmp/build/80754af9/tornado_1606942266872/work
+traitlets @ file:///tmp/build/80754af9/traitlets_1632746497744/work
+typing_extensions @ file:///opt/conda/conda-bld/typing_extensions_1647553014482/work
+urllib3==1.26.9
+wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+webencodings==0.5.1
+Werkzeug @ file:///opt/conda/conda-bld/werkzeug_1645628268370/work
+widgetsnbextension==3.5.1
+wrapt==1.14.0
+xacro==1.14.13
+zipp==3.6.0
