--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ matplotlib==3.3.4
 numpy==1.19.5
 pandas==1.1.5
 requests==2.27.1
-tensorflow==2.2.0
+tensorflow-cpu==2.2.0
 tensorflow-estimator==2.2.0
 tensorflow-hub==0.12.0
 tensorflowjs==3.15.0
