--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ tensorflow-hub==0.12.0
 tensorflowjs==3.15.0
 tensorboard==2.2.2
 tensorboard-plugin-wit==1.8.1
+protobuf==3.20.*
 scikit-learn #@ file:///tmp/build/80754af9/scikit-learn_1621365798935/work
-scipy #@ file:///tmp/build/80754af9/scipy_1597686625380/work
+scipy==1.4.1 #@ file:///tmp/build/80754af9/scipy_1597686625380/work
