--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ numpy==1.19.5
 pandas==1.1.5
 requests==2.27.1
 tensorflow-cpu==2.2.0
+tensorflow-estimator==2.2.0
+tensorflow-hub==0.12.0
 tensorboard==2.2.2
 tensorboard-plugin-wit==1.8.1
 protobuf==3.20.1
